# ODR

./: CMakeLists.txt  README.md  buildall.sh  output.txt
include/: file_using_lib.h  lib.h
source/: file_using_lib.c  lib.c  main.c
test/: CMakeLists.txt
test/source/: mock_lib.cpp  test_file_using_lib.cpp  test_lib.cpp
